--- a/index.html
+++ b/index.html
@@ -3,9 +3,66 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Byfron</title>
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Your Scripthub</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Byfron</h1>
+    <header>
+        <h1>Your Scripthub</h1>
+        <nav>
+            <ul>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#scripts">Scripts</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="home">
+            <h2>Welcome to Your Scripthub</h2>
+            <p>Here, you can find various Roblox scripts to use with your favorite executors.</p>
+        </section>
+
+        <section id="scripts">
+            <h2>Available Scripts</h2>
+            <div class="script-list">
+                <div class="script-item">
+                    <h3>Script 1</h3>
+                    <p>Description of Script 1.</p>
+                    <button>Copy Script</button>
+                </div>
+                <div class="script-item">
+                    <h3>Script 2</h3>
+                    <p>Description of Script 2.</p>
+                    <button>Copy Script</button>
+                </div>
+                <!-- Add more scripts here -->
+            </div>
+        </section>
+
+        <section id="about">
+            <h2>About Us</h2>
+            <p>This site provides scripts for Roblox enthusiasts. Feel free to browse and copy the scripts.</p>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Us</h2>
+            <p>Email: contact@yourscripthub.com</p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2024 Your Scripthub. All rights reserved.</p>
+    </footer>
+</body>
+    <head>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <!-- Your content here -->
+    <script src="script.js"></script>
 </body>
 </html>
