--- a/index.html
+++ b/index.html
@@ -4,65 +4,76 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Your Scripthub</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Venix Scripthub</title>
+
+    <!-- Link to Fredoka font from Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+
+    <!-- Style for the page -->
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Fredoka', sans-serif;
+            background-image: url('https://i.giphy.com/media/QpVUMRUJGokfqXyfa1/giphy.gif'); /* Your custom GIF background */
+            background-size: cover;
+            background-position: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            color: white;
+            text-align: center;
+        }
+
+        h1 {
+            font-size: 3em;
+            margin-bottom: 20px;
+        }
+
+        button {
+            background-color: rgba(255, 255, 255, 0.8);
+            color: #333;
+            font-size: 1.2em;
+            border: none;
+            padding: 15px 30px;
+            cursor: pointer;
+            border-radius: 5px;
+        }
+
+        button:hover {
+            background-color: rgba(255, 255, 255, 1);
+        }
+
+        footer {
+            position: absolute;
+            bottom: 10px;
+            color: #fff;
+        }
+    </style>
 </head>
 <body>
-    <header>
-        <h1>Your Scripthub</h1>
-        <nav>
-            <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#scripts">Scripts</a></li>
-                <li><a href="#about">About</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <main>
-        <section id="home">
-            <h2>Welcome to Your Scripthub</h2>
-            <p>Here, you can find various Roblox scripts to use with your favorite executors.</p>
-        </section>
+    <h1>Venix Scripthub</h1>
+    <button id="copyButton">Copy Script</button>
 
-        <section id="scripts">
-            <h2>Available Scripts</h2>
-            <div class="script-list">
-                <div class="script-item">
-                    <h3>Script 1</h3>
-                    <p>Description of Script 1.</p>
-                    <button>Copy Script</button>
-                </div>
-                <div class="script-item">
-                    <h3>Script 2</h3>
-                    <p>Description of Script 2.</p>
-                    <button>Copy Script</button>
-                </div>
-                <!-- Add more scripts here -->
-            </div>
-        </section>
+    <footer>&copy; Venix 2024</footer>
 
-        <section id="about">
-            <h2>About Us</h2>
-            <p>This site provides scripts for Roblox enthusiasts. Feel free to browse and copy the scripts.</p>
-        </section>
-
-        <section id="contact">
-            <h2>Contact Us</h2>
-            <p>Email: contact@yourscripthub.com</p>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2024 Your Scripthub. All rights reserved.</p>
-    </footer>
-</body>
-    <head>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-    <!-- Your content here -->
-    <script src="script.js"></script>
+    <!-- JavaScript to copy text to clipboard -->
+    <script>
+        document.getElementById('copyButton').addEventListener('click', function() {
+            const script = "hi"; // Script to copy
+            navigator.clipboard.writeText(script).then(() => {
+                alert('Copied "hi" to clipboard!');
+            }).catch(err => {
+                alert('Failed to copy text: ', err);
+            });
+        });
+    </script>
 </body>
 </html>
