--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Venix Scripthub</title>
+    <title>Venix Script Hub</title>
 
-    <!-- Link to Fredoka font from Google Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka&display=swap" rel="stylesheet">
+    <!-- Add Google Font (Poppins and Fredoka One) -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&display=swap" rel="stylesheet">
 
-    <!-- Style for the page -->
     <style>
         * {
             margin: 0;
@@ -17,63 +17,326 @@
             box-sizing: border-box;
         }
 
+        html {
+            scroll-behavior: smooth;
+        }
+
         body {
-            font-family: 'Fredoka', sans-serif;
-            background-image: url('https://i.giphy.com/media/QpVUMRUJGokfqXyfa1/giphy.gif'); /* Your custom GIF background */
-            background-size: cover;
-            background-position: center;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
+            background-color: #121212;
+            font-family: 'Poppins', sans-serif;
             color: white;
             text-align: center;
+            overflow-x: hidden;
+        }
+
+        /* Navigation bar */
+        .navbar {
+            display: flex;
+            justify-content: space-between;
+            width: 100%;
+            padding: 20px;
+            background-color: #1f1f1f;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.7);
+            position: fixed;
+            top: 0;
+            z-index: 1000;
+        }
+
+        .navbar a {
+            color: white;
+            text-decoration: none;
+            margin: 0 15px;
+            font-size: 1em;
+            transition: color 0.3s;
+        }
+
+        .navbar a:hover {
+            color: #00adb5;
+        }
+
+        .logo {
+            font-weight: 700;
+            font-size: 1.6em;
+        }
+
+        /* Main section */
+        .main-content {
+            margin-top: 100px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
         }
 
         h1 {
-            font-size: 3em;
+            font-size: 2.5em;
+            line-height: 1.2em;
+            color: white;
+            font-weight: 700;
             margin-bottom: 20px;
         }
 
-        button {
-            background-color: rgba(255, 255, 255, 0.8);
-            color: #333;
-            font-size: 1.2em;
-            border: none;
+        /* Style for the word "Script" */
+        .gradient-text {
+            background: -webkit-linear-gradient(left, #00adb5, #ff2e63);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+        }
+
+        p {
+            margin: 20px 0;
+            font-size: 1.1em;
+            color: #bdbdbd;
+        }
+
+        /* Buttons */
+        .button-container {
+            margin-top: 30px;
+        }
+
+        .button {
+            background-color: #fff;
+            color: #393e46;
             padding: 15px 30px;
+            margin: 10px;
+            border: none;
+            border-radius: 30px;
             cursor: pointer;
-            border-radius: 5px;
+            font-size: 1em;
+            font-family: 'Poppins', sans-serif;
+            transition: background-color 0.3s, box-shadow 0.3s;
         }
 
-        button:hover {
-            background-color: rgba(255, 255, 255, 1);
+        .button:hover {
+            background-color: #f0f0f0;
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
+        /* Footer */
         footer {
-            position: absolute;
-            bottom: 10px;
-            color: #fff;
+            margin-top: 50px;
+            color: #888;
+            font-size: 0.9em;
+        }
+
+        /* Section styling */
+        section {
+            padding: 50px 20px;
+            background-color: #1a1a1a;
+            margin-top: 30px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        section h2 {
+            font-size: 2em;
+            color: white;
+            margin-bottom: 20px;
+        }
+
+        section p {
+            color: #bdbdbd;
+            font-size: 1.1em;
+            line-height: 1.6em;
+        }
+
+        /* Scripts section */
+        .search-container {
+            margin: 30px auto;
+            max-width: 800px;
+            padding: 20px;
+        }
+
+        .search-container input {
+            padding: 10px;
+            font-size: 1em;
+            border: 1px solid #333;
+            border-radius: 5px;
+            width: calc(100% - 120px);
+        }
+
+        .search-container button {
+            padding: 10px 20px;
+            font-size: 1em;
+            border: none;
+            background-color: #00adb5;
+            color: white;
+            border-radius: 5px;
+            cursor: pointer;
+            margin-left: 10px;
+        }
+
+        .search-container button:hover {
+            background-color: #008c95;
+        }
+
+        .script-cards {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            margin-top: 30px;
+        }
+
+        .script-card {
+            background-color: #1f1f1f;
+            border-radius: 10px;
+            padding: 20px;
+            width: 300px;
+            text-align: left;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+            display: flex;
+            flex-direction: column;
+            font-family: 'Poppins', sans-serif;
+        }
+
+        .script-card-content {
+            margin-bottom: 20px;
+        }
+
+        .script-card h3 {
+            margin-bottom: 10px;
+            color: white; /* Title color */
+            font-size: 1.5em;
+        }
+
+        .script-card p {
+            margin-bottom: 10px;
+            color: #bdbdbd;
+        }
+
+        .script-card button {
+            background-color: #fff;
+            color: #393e46; /* Button text color */
+            padding: 10px;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+            font-size: 1em;
+            transition: background-color 0.3s;
+        }
+
+        .script-card button:hover {
+            background-color: #f0f0f0;
         }
     </style>
 </head>
 <body>
 
-    <h1>Venix Scripthub</h1>
-    <button id="copyButton">Copy Script</button>
+    <!-- Navigation bar -->
+    <div class="navbar">
+        <div class="logo">Venix Hub</div>
+        <div>
+            <a href="#about">About</a>
+            <a href="#scripts">Get Scripts</a>
+            <a href="#discord">Discord</a>
+        </div>
+    </div>
 
-    <footer>&copy; Venix 2024</footer>
+    <!-- Main content -->
+    <div class="main-content">
+        <h1>Empowering <span class="gradient-text">Script</span> Performance</h1>
+        <p>Providing optimized, high-performance scripts for all your needs. We focus on speed and visual clarity to deliver the best scripting experience.</p>
 
-    <!-- JavaScript to copy text to clipboard -->
-    <script>
-        document.getElementById('copyButton').addEventListener('click', function() {
-            const script = "hi"; // Script to copy
-            navigator.clipboard.writeText(script).then(() => {
-                alert('Copied "hi" to clipboard!');
-            }).catch(err => {
-                alert('Failed to copy text: ', err);
-            });
-        });
-    </script>
+        <div class="button-container">
+            <button class="button">Learn More</button>
+            <button class="button">Start Now</button>
+        </div>
+    </div>
+
+    <!-- About Section -->
+    <section id="about">
+        <h2>About Venix Script Hub</h2>
+        <p>
+            Venix Script Hub is your go-to solution for high-quality, reliable, and efficient scripting services.
+            Our team of experts is dedicated to delivering top-notch scripts that elevate performance and enhance
+            user experience. Whether you're a developer looking for custom scripts or need help optimizing your
+            scripts, Venix is here to help.
+        </p>
+    </section>
+
+    <!-- Discord Section -->
+    <section id="discord">
+        <h2>Join Our Discord</h2>
+        <p>
+            Stay connected with the community, receive support, and get exclusive updates by joining our Discord server. We have a dedicated team ready to assist with any questions or issues you may encounter.
+        </p>
+        <div class="button-container">
+            <button class="button">Join Discord</button>
+        </div>
+    </section>
+
+    <!-- Script Search and Get Scripts Section -->
+    <section id="scripts">
+        <div class="search-container">
+            <input type="text" id="search-input" placeholder="Search for scripts...">
+            <button onclick="searchScripts()">Search</button>
+        </div>
+        <h2>Get Your Scripts</h2>
+        <div class="script-cards">
+            <div class="script-card" data-title="Solara">
+                <div class="script-card-content">
+                    <h3>Solara</h3>
+                    <p>Description of Solara. Quick overview of its features and benefits.</p>
+                    <button onclick="window.location.href='https://pastebin.com/your-script-url-1'">Get Script</button>
+                </div>
+            </div>
+            <div class="script-card" data-title="Celery">
+                <div class="script-card-content">
+                    <h3>Celery</h3>
+                    <p>Description of Celery. Quick overview of its features and benefits.</p>
+                    <button onclick="window.location.href='https://pastebin.com/your-script-url-2'">Get Script</button>
+                </div>
+            </div>
+            <div class="script-card" data-title="Wave">
+                <div class="script-card-content">
+                    <h3>Wave</h3>
+                    <p>Description of Wave. Quick overview of its features and benefits.</p>
+                    <button onclick="window.location.href='https://pastebin.com/your-script-url-3'">Get Script</button>
+                </div>
+            </div>
+            <div class="script-card" data-title="Doors Script">
+                <div class="script-card-content">
+                    <h3>Doors Script</h3>
+                    <p>Description of Doors Script. Quick overview of its features and benefits.</p>
+                    <button onclick="window.location.href='https://pastebin.com/your-script-url-4'">Get Script</button>
+                </div>
+            </div>
+            <div class="script-card" data-title="Highlight Hub (MM2)">
+                <div class="script-card-content">
+                    <h3>Highlight Hub (MM2)</h3>
+                    <p>Description of Highlight Hub (MM2). Quick overview of its features and benefits.</p>
+                    <button onclick="window.location.href='https://pastebin.com/your-script-url-5'">Get Script</button>
+                </div>
+            </div>
+            <div class="script-card" data-title="Orion (UI Library)">
+                <div class="script-card-content">
+                    <h3>Orion (UI Library)</h3>
+                    <p>Description of Orion (UI Library). Quick overview of its features and benefits.</p>
+                    <button onclick="window.location.href='https://pastebin.com/your-script-url-6'">Get Script</button>
+                </div>
+            </div>
+            <div class="script-card" data-title="Eclipse hub">
+                <div class="script-card-content">
+                    <h3>Eclipse hub</h3>
+                    <p>Description of Eclipse hub. Quick overview of its features and benefits.</p>
+                    <button onclick="window.location.href='https://pastebin.com/your-script-url-7'">Get Script</button>
+                </div>
+            </div>
+            <div class="script-card" data-title="Nsexpression (TSBG)">
+                <div class="script-card-content">
+                    <h3>Nsexpression (TSBG)</h3>
+                    <p>Description of Nsexpression (TSBG). Quick overview of its features and benefits.</p>
+                    <button onclick="window.location.href='https://pastebin.com/your-script-url-8'">Get Script</button>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        &copy; 2024 Venix Script Hub. All rights reserved.
+    </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
