--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         }
 
         .gradient-text {
-            color: #00adb5; /* Removed gradient, added solid color */
+            color: #ffffff; /* Removed gradient, added solid color */
         }
 
         p {
@@ -159,30 +159,13 @@
     <div class="main-content">
         <h1>Empowering <span class="gradient-text">Script</span> Performance</h1>
         <p>Providing optimized, high-performance scripts for all your needs. We focus on speed and visual clarity to deliver the best scripting experience.</p>
-
-        <div class="button-container">
-            <button class="button">Learn More</button>
-            <button class="button">Start Now</button>
-        </div>
     </div>
 
     <!-- About Section -->
     <section id="about">
         <h2>About Venix Script Hub</h2>
         <p>
-            Venix Script Hub is your go-to solution for high-quality, reliable, and efficient scripting services.
-            Our team of experts is dedicated to delivering top-notch scripts that elevate performance and enhance
-            user experience. Whether you're a developer looking for custom scripts or need help optimizing your
-            scripts, Venix is here to help.
-        </p>
-    </section>
-
-    <!-- FAQ Section -->
-    <section id="faq">
-        <h2>Frequently Asked Questions</h2>
-        <p>
-            <strong>Q1:</strong> What kind of scripts does Venix offer?<br>
-            <strong>Answer:</strong> We offer high-performance scripts tailored to a variety of platforms and needs.
+            Venix is a script library designed to support a wide variety of games with strong graphical user interfaces (GUIs). This library does not feature a key system for access, ensuring that users can utilize its functionalities efficiently. Venix integrates multiple scripts, providing an organized and user-friendly experience for anyone looking to enhance their gaming.
         </p>
     </section>
 
