--- a/index.html
+++ b/index.html
@@ -150,8 +150,8 @@
         <div class="logo">Venix Hub</div>
         <div>
             <a href="#about">About</a>
-            <a href="#faq">FAQ</a>
-            <a href="#discord">Discord</a>
+            <a href="https://discord.gg/your-discord-link">Discord</a>
+            <a href="https://github.com/your-github-link">GitHub</a>
         </div>
     </div>
 
@@ -159,6 +159,15 @@
     <div class="main-content">
         <h1>Empowering <span class="gradient-text">Script</span> Performance</h1>
         <p>Providing optimized, high-performance scripts for all your needs. We focus on speed and visual clarity to deliver the best scripting experience.</p>
+
+        <div class="button-container">
+            <a href="https://discord.gg/your-discord-link">
+                <button class="button">Discord</button>
+            </a>
+            <a href="https://github.com/your-github-link">
+                <button class="button">GitHub</button>
+            </a>
+        </div>
     </div>
 
     <!-- About Section -->
