--- a/index.html
+++ b/index.html
@@ -161,10 +161,10 @@
         <p>Providing optimized, high-performance scripts for all your needs. We focus on speed and visual clarity to deliver the best scripting experience.</p>
 
         <div class="button-container">
-            <a href="https://discord.gg/your-discord-link">
+            <a href="https://discord.gg/zdTarD7eGx">
                 <button class="button">Discord</button>
             </a>
-            <a href="https://github.com/your-github-link">
+            <a href="https://github.com/FrontlineHD/VenixLibrary">
                 <button class="button">GitHub</button>
             </a>
         </div>
